# ClipMon

./: Cargo.toml  README.md
.cargo/: config.toml
dll/: Cargo.toml
dll/src/: get_clipboard_data.rs  lib.rs  set_clipboard_data.rs
injector/: Cargo.toml
injector/src/: main.rs
test_prog/: clipboard.nim
