[package]
name = "clipmon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8.0"
retour = { version = "0.3", features = ["static-detour"] }
windows = { version = "0.48.0", features =["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader"] }
