[package]
name = "clipmon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clipboard-win = "4.5.0"
libloading = "0.8.0"
once_cell = "1.18.0"
retour = { version = "0.3", features = ["static-detour"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
windows = { version = "0.48.0", features =["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader"] }
